# WeGreek

./: README.md  main.py  pyproject.toml
app/: __init__.py  functions.py  views.py
app/static/: style.css
app/templates/: 404.html  account.html  admacsnoti.html  allpolls.html  allposts.html  allwikis.html  changemail.html  deleteuser.html  discordadd.html  index.html  login.html  makepoll.html  makepost.html  makewiki.html  notifications.html  poll.html  poll2.html  post.html  rules.html  search.html  signup.html  user.html  wiki.html
